apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: teste
  labels:
    app: apache
spec:
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: ubuntu/apache2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: 500m
