apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: teste
spec:
  selector:
    app: apache
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 80
